--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,14 +2,14 @@
 
 
     <div *ngFor="let cancion of nuevasCanciones" class="card">
-      <img [src]="cancion.images[0].url" class="card-img-top" alt="...">
-      <div class="card-body">
-          <h5 class="card-title">{{ cancion.name }}</h5>
-          <p class="card-text">
-            <span *ngFor="let artista of cancion.artists " class="badge badge-primary">{{ artista.name }}</span>
-          </p>
-      </div>
+        <img [src]="cancion.images | noimage " class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">{{ cancion.name }}</h5>
+            <p class="card-text">
+                <span *ngFor="let artista of cancion.artists " class="badge badge-primary">{{ artista.name }}</span>
+            </p>
+        </div>
     </div>
 
 
- </div>
+</div>
