--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col">
-    <input #termino type="text" (keyup)="buscar(termino.value)" class="form-control" placeholder="Buscar Artista">
-  </div>
+    <div class="col">
+        <input #termino type="text" (keyup)="buscar(termino.value)" class="form-control" placeholder="Buscar Artista">
+    </div>
 </div>
 
 
@@ -9,11 +9,11 @@
 
 
     <div *ngFor="let artista of artistas" class="card">
-      <img [src]="artista.images[0].url" class="card-img-top" alt="...">
-      <div class="card-body">
-          <h5 class="card-title">{{ artista.name }}</h5>
-      </div>
+        <img [src]="artista.images | noimage " class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">{{ artista.name }}</h5>
+        </div>
     </div>
 
 
- </div>
+</div>
